--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -130,7 +130,7 @@ jobs:
           path: ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
           retention-days: 7
 
-  wheelhouse-build:
+  smoke-tests:
     name: Build wheelhouse
     runs-on: ${{ matrix.os }}
     needs: [gen-stubs]
@@ -202,21 +202,6 @@ jobs:
         echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
         echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
-    - name: Install build and twine, and build dist artifacts
-      run: |
-        # This and the next step are the same as the build-library action
-        python -m pip install build twine
-        python -m build
-        python -m twine check dist/*
-
-    - name: "Upload distribution artifacts to GitHub artifacts"
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.PACKAGE_NAME }}-artifacts
-        path: dist/
-        retention-days: 7
-
     - name: Install package and create wheelhouse
       run: |
         python -m pip install -e .
@@ -238,7 +223,7 @@ jobs:
 
   doc-build:
     name: Make html and markdown documentation
-    needs: [wheelhouse-build]
+    needs: [smoke-tests]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -322,6 +307,84 @@ jobs:
       with:
         name: documentation-html
         path: doc/_build/html
+        retention-days: 7
+
+  build-library:
+    name: Build library
+    runs-on: ubuntu-latest
+    needs: [gen-stubs, smoke-tests, doc-build]
+    steps:
+    - name: "Install Git and clone project"
+      uses: actions/checkout@v4
+
+    - name: "Set up Python"
+      uses: ansys/actions/_setup-python@main
+      with:
+        python-version: ${{ env.MAIN_PYTHON_VERSION }}
+        use-cache: false
+
+    - name: Download the library artifacts
+      uses: actions/download-artifact@v4
+      with:
+        pattern: "*-${{ env.MAIN_PYTHON_VERSION }}"
+        path: ${{ env.PACKAGE_PATH }}/
+
+    - name: Display structure of downloaded files
+      run: |
+        cd ${{ env.PACKAGE_PATH }}
+
+        find . -name "v*-${{ env.MAIN_PYTHON_VERSION }}" -print0 |
+        while IFS= read -r -d '' line
+        do
+          version_only=${line%%-*}
+          echo "Renaming folder from $line to $version_only"
+          mv "$line" "$version_only"
+        done
+
+        cd -
+
+        ls -R ${{ env.PACKAGE_PATH }}/
+
+    - name: Create __init__.py in ${{ env.PACKAGE_PATH }}
+      shell: python
+      run: |
+        import os
+
+        subfolders = [ f.name for f in os.scandir("${{ env.PACKAGE_PATH }}/") if f.is_dir() ]
+
+        with open("${{ env.PACKAGE_PATH }}/__init__.py", "w") as f:
+            f.write('''try:
+            import importlib.metadata as importlib_metadata
+        except ModuleNotFoundError:  # pragma: no cover
+            import importlib_metadata  # type: ignore
+
+        __version__ = importlib_metadata.version("ansys-mechanical-stubs")
+        """Patch version for the ansys-mechanical-stubs package."""\n\n''')
+
+            for folder in subfolders:
+                f.write(f"from .{folder} import *\n")
+                f.write('"""Mechanical installation version."""\n')
+
+    - name: "Install build and twine"
+      shell: bash
+      run: |
+        python -m pip install build twine
+
+    - name: "Build distribution artifacts"
+      shell: bash
+      run: |
+        python -m build
+
+    - name: "Check build health"
+      shell: bash
+      run: |
+        python -m twine check dist/*
+
+    - name: "Upload distribution artifacts to GitHub artifacts"
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.PACKAGE_NAME }}-artifacts
+        path: dist/
         retention-days: 7
 
   release-pypi-private:
