--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,7 +63,7 @@ jobs:
         mechanical: [
           { image: '24.1.0', version: '241' }
         ]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -127,7 +127,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -175,216 +175,216 @@ jobs:
         path: wheelhouse/*
         retention-days: 7
 
-  # doc-build:
-  #   name: Make html and markdown documentation
-  #   needs: [smoke-tests]
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       python-version: ['3.10']
-  #   steps:
-  #   - name: "Install Git and clone project"
-  #     uses: actions/checkout@v4
+  doc-build:
+    name: Make html and markdown documentation
+    needs: [smoke-tests]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+    steps:
+    - name: "Install Git and clone project"
+      uses: actions/checkout@v4
 
-  #   - name: "Download stubs"
-  #     uses: ./.github/workflows/setup-stubs/
-  #     with:
-  #       folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
-  #       package-path: "${{ env.PACKAGE_PATH }}"
-  #       python-version: ${{ matrix.python-version }}
+    - name: "Download stubs"
+      uses: ./.github/workflows/setup-stubs/
+      with:
+        folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
+        package-path: "${{ env.PACKAGE_PATH }}"
+        python-version: ${{ matrix.python-version }}
 
-  #   - name: "Install project & doc dependencies"
-  #     run: |
-  #       pip install -e .[doc]
+    - name: "Install project & doc dependencies"
+      run: |
+        pip install -e .[doc]
 
-  #   - name: "Generate html and markdown documentation"
-  #     run: |
-  #       make -C doc html
-  #       make -C doc markdown
+    - name: "Generate html and markdown documentation"
+      run: |
+        make -C doc html
+        make -C doc markdown
 
-  #   - name: "Clean ID in first row"
-  #     run: |
-  #       python scripts/01-clean-id.py
+    - name: "Clean ID in first row"
+      run: |
+        python scripts/01-clean-id.py
 
-  #   - name: "Clean empty rows"
-  #     run: |
-  #       python scripts/02-clean-empty-row.py
+    - name: "Clean empty rows"
+      run: |
+        python scripts/02-clean-empty-row.py
 
-  #   - name: "Create table of contents"
-  #     run: |
-  #       python scripts/03-create-toc-from-html-mechanical.py
+    - name: "Create table of contents"
+      run: |
+        python scripts/03-create-toc-from-html-mechanical.py
 
-  #   - name: "Add header to tables"
-  #     run: |
-  #       python scripts/04-add-header-to-tables.py
+    - name: "Add header to tables"
+      run: |
+        python scripts/04-add-header-to-tables.py
 
-  #   - name: "Remove links in heading"
-  #     run: |
-  #       python scripts/05-remove-link-in-heading.py
+    - name: "Remove links in heading"
+      run: |
+        python scripts/05-remove-link-in-heading.py
 
-  #   - name: "Upload to GitHub Artifacts"
-  #     if: matrix.python-version == env.MAIN_PYTHON_VERSION
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: toc-file
-  #       path: output/
+    - name: "Upload to GitHub Artifacts"
+      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      uses: actions/upload-artifact@v4
+      with:
+        name: toc-file
+        path: output/
 
-  #   - name: "Upload markdown documentation"
-  #     uses: actions/upload-artifact@v4
-  #     if: matrix.python-version == env.MAIN_PYTHON_VERSION
-  #     with:
-  #       name: documentation-md
-  #       path: doc/_build/markdown
-  #       retention-days: 7
+    - name: "Upload markdown documentation"
+      uses: actions/upload-artifact@v4
+      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      with:
+        name: documentation-md
+        path: doc/_build/markdown
+        retention-days: 7
 
-  #   - name: "Upload Sphinx HTML documentation"
-  #     uses: actions/upload-artifact@v4
-  #     if: matrix.python-version == env.MAIN_PYTHON_VERSION
-  #     with:
-  #       name: documentation-html
-  #       path: doc/_build/html
-  #       retention-days: 7
+    - name: "Upload Sphinx HTML documentation"
+      uses: actions/upload-artifact@v4
+      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      with:
+        name: documentation-html
+        path: doc/_build/html
+        retention-days: 7
 
-  # build-library:
-  #   name: Build library
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-build]
-  #   steps:
-  #   - name: "Install Git and clone project"
-  #     uses: actions/checkout@v4
+  build-library:
+    name: Build library
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+    steps:
+    - name: "Install Git and clone project"
+      uses: actions/checkout@v4
 
-  #   - name: "Set up Python"
-  #     uses: ansys/actions/_setup-python@v6
-  #     with:
-  #       python-version: ${{ env.MAIN_PYTHON_VERSION }}
-  #       use-cache: false
+    - name: "Set up Python"
+      uses: ansys/actions/_setup-python@v6
+      with:
+        python-version: ${{ env.MAIN_PYTHON_VERSION }}
+        use-cache: false
 
-  #   - name: "Download stubs"
-  #     uses: ./.github/workflows/setup-stubs/
-  #     with:
-  #       folder-pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
-  #       package-path: "${{ env.PACKAGE_PATH }}"
-  #       python-version: ${{ env.MAIN_PYTHON_VERSION }}
+    - name: "Download stubs"
+      uses: ./.github/workflows/setup-stubs/
+      with:
+        folder-pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
+        package-path: "${{ env.PACKAGE_PATH }}"
+        python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  #   - name: "Install build and twine"
-  #     shell: bash
-  #     run: |
-  #       python -m pip install build twine
+    - name: "Install build and twine"
+      shell: bash
+      run: |
+        python -m pip install build twine
 
-  #   - name: "Build distribution artifacts"
-  #     shell: bash
-  #     run: |
-  #       python -m build
+    - name: "Build distribution artifacts"
+      shell: bash
+      run: |
+        python -m build
 
-  #   - name: "Check build health"
-  #     shell: bash
-  #     run: |
-  #       python -m twine check dist/*
+    - name: "Check build health"
+      shell: bash
+      run: |
+        python -m twine check dist/*
 
-  #   - name: "Upload distribution artifacts to GitHub artifacts"
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: ${{ env.PACKAGE_NAME }}-artifacts
-  #       path: dist/
-  #       retention-days: 7
+    - name: "Upload distribution artifacts to GitHub artifacts"
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.PACKAGE_NAME }}-artifacts
+        path: dist/
+        retention-days: 7
 
-  # release-pypi-private:
-  #   name: "Release to the private PyPI repository"
-  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-build]
-  #   steps:
-  #     - name: "Release to the private PyPI repository"
-  #       uses: ansys/actions/release-pypi-private@v6
-  #       with:
-  #         library-name: ${{ env.PACKAGE_NAME }}
-  #         twine-username: "__token__"
-  #         twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
+  release-pypi-private:
+    name: "Release to the private PyPI repository"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+    steps:
+      - name: "Release to the private PyPI repository"
+        uses: ansys/actions/release-pypi-private@v6
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          twine-username: "__token__"
+          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
 
-  # # release-pypi-public:
-  # #   name: "Release to the public PyPI repository"
-  # #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-  # #   runs-on: ubuntu-latest
-  # #   needs: [release-pypi-private]
-  # #   steps:
-  # #     - name: "Release to the public PyPI repository"
-  # #       uses: ansys/actions/release-pypi-public@v6
-  # #       with:
-  # #         library-name: ${{ env.PACKAGE_NAME }}
-  # #         twine-username: "__token__"
-  # #         twine-token: ${{ secrets.PYPI_TOKEN }}
-
-  # release-github:
-  #   name: "Release to GitHub"
+  # release-pypi-public:
+  #   name: "Release to the public PyPI repository"
   #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
   #   runs-on: ubuntu-latest
   #   needs: [release-pypi-private]
   #   steps:
-  #     - name: "Release to GitHub"
-  #       uses: ansys/actions/release-github@v6
+  #     - name: "Release to the public PyPI repository"
+  #       uses: ansys/actions/release-pypi-public@v6
   #       with:
   #         library-name: ${{ env.PACKAGE_NAME }}
+  #         twine-username: "__token__"
+  #         twine-token: ${{ secrets.PYPI_TOKEN }}
 
-  # doc-deploy-dev:
-  #   name: "Deploy development documentation"
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-build]
-  #   steps:
-  #     - name: "Deploy development documentation"
-  #       uses: ansys/actions/doc-deploy-dev@v6
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         doc-artifact-name: 'documentation-html'
+  release-github:
+    name: "Release to GitHub"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: [release-pypi-private]
+    steps:
+      - name: "Release to GitHub"
+        uses: ansys/actions/release-github@v6
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
 
-  # doc-index-dev:
-  #   name: "Deploy dev index docs"
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-deploy-dev]
-  #   steps:
-  #     - name: "Deploy the latest documentation index"
-  #       uses: ansys/actions/doc-deploy-index@v6
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}/version/dev
-  #         index-name: pymechanical-stubs-vdev
-  #         host-url: ${{ env.MEILISEARCH_HOST_URL }}
-  #         api-key: ${{ env.MEILISEARCH_API_KEY }}
-  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  doc-deploy-dev:
+    name: "Deploy development documentation"
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+    steps:
+      - name: "Deploy development documentation"
+        uses: ansys/actions/doc-deploy-dev@v6
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          doc-artifact-name: 'documentation-html'
 
-  # doc-deploy-stable:
-  #   name: "Deploy stable documentation"
-  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-  #   runs-on: ubuntu-latest
-  #   needs: [release-pypi-private, release-github]
-  #   steps:
-  #     - name: "Deploy stable documentation"
-  #       uses: ansys/actions/doc-deploy-stable@v6
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         doc-artifact-name: 'documentation-html'
+  doc-index-dev:
+    name: "Deploy dev index docs"
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [doc-deploy-dev]
+    steps:
+      - name: "Deploy the latest documentation index"
+        uses: ansys/actions/doc-deploy-index@v6
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}/version/dev
+          index-name: pymechanical-stubs-vdev
+          host-url: ${{ env.MEILISEARCH_HOST_URL }}
+          api-key: ${{ env.MEILISEARCH_API_KEY }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  # doc-index-stable:
-  #   name: "Index the documentation and scrap using PyMeilisearch"
-  #   if: github.event_name == 'push'
-  #   runs-on: ubuntu-latest
-  #   needs: [doc-deploy-stable]
-  #   steps:
-  #     - name: "Scrape the stable documentation to PyMeilisearch"
-  #       run: |
-  #         VERSION=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('.'.join(__version__.split('.')[:2]))")
-  #         VERSION_MEILI=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('-'.join(__version__.split('.')[:2]))")
-  #         echo "Calculated VERSION: $VERSION"
-  #         echo "Calculated VERSION_MEILI: $VERSION_MEILI"
+  doc-deploy-stable:
+    name: "Deploy stable documentation"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: [release-pypi-private, release-github]
+    steps:
+      - name: "Deploy stable documentation"
+        uses: ansys/actions/doc-deploy-stable@v6
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          doc-artifact-name: 'documentation-html'
 
-  #     - name: "Deploy the latest documentation index"
-  #       uses: ansys/actions/doc-deploy-index@v6
-  #       with:
-  #         cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
-  #         index-name: "pymechanical-stubs-v$VERSION_MEILI"
-  #         host-url: ${{ env.MEILISEARCH_HOST_URL }}
-  #         api-key: ${{ secrets.MEILISEARCH_API_KEY }}
-  #         doc-artifact-name: 'documentation-html'
-  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  doc-index-stable:
+    name: "Index the documentation and scrap using PyMeilisearch"
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    needs: [doc-deploy-stable]
+    steps:
+      - name: "Scrape the stable documentation to PyMeilisearch"
+        run: |
+          VERSION=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('.'.join(__version__.split('.')[:2]))")
+          VERSION_MEILI=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('-'.join(__version__.split('.')[:2]))")
+          echo "Calculated VERSION: $VERSION"
+          echo "Calculated VERSION_MEILI: $VERSION_MEILI"
+
+      - name: "Deploy the latest documentation index"
+        uses: ansys/actions/doc-deploy-index@v6
+        with:
+          cname: "scripting.mechanical.docs.pyansys.com/version/$VERSION"
+          index-name: "pymechanical-stubs-v$VERSION_MEILI"
+          host-url: ${{ env.MEILISEARCH_HOST_URL }}
+          api-key: ${{ secrets.MEILISEARCH_API_KEY }}
+          doc-artifact-name: 'documentation-html'
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
