--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,11 @@ build = [
     "ansys-pythonnet==3.1.0rc3"
 ]
 doc = [
-    "ansys-sphinx-theme[autoapi]==0.16.5",
+    "ansys-sphinx-theme[autoapi]==1.0.11",
     "Sphinx==7.3.7",
     "sphinx-copybutton==0.5.2",
     "sphinx-notfound-page==1.0.2",
-    "sphinx-design==0.6.0",
+    "sphinx-design==0.6.1",
     "sphinx-jinja==2.0.2",
     "autodoc_pydantic==2.0.1",
     "jupyter_sphinx==0.5.3",
@@ -44,7 +44,7 @@ doc = [
     "sphinxcontrib-globalsubs==0.1.1",
     "sphinxcontrib-httpdomain==1.8.1",
     "sphinx-copybutton==0.5.2",
-    "sphinx_design==0.6.0",
+    "sphinx_design==0.6.1",
     "sphinx-markdown-builder==0.6.6",
     "sphinxnotes-strike==1.2.1",
 ]
@@ -83,7 +83,7 @@ convention = "numpy"
 quote-style = "double"
 indent-style = "space"
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 combine-as-imports = true
 force-sort-within-sections = true
 known-first-party = ["ansys"]
