--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -261,6 +261,10 @@ jobs:
       run: |
         python scripts/05-remove-link-in-heading.py
 
+    - name: "Make all hrefs local in Markdown"
+      run: |
+        python scripts/fix-href-md.py
+
     - name: "Upload to GitHub Artifacts"
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       uses: actions/upload-artifact@v4
