--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -74,7 +74,7 @@ jobs:
           { image: '24.1.0', version: '241' },
           { image: '24.2.0', version: '242' },
         ]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -137,8 +137,8 @@ jobs:
     needs: [gen-stubs]
     strategy:
       matrix:
-        os: [ubuntu-latest] #, windows-latest]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        os: [ubuntu-latest, windows-latest]
+        python-version: ['3.10', '3.11', '3.12']
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -209,20 +209,20 @@ jobs:
         sudo apt install -y texlive-latex-extra latexmk texlive-xetex texlive-fonts-extra qpdf xindy
         python -m pip install -e .[doc]
 
-    - name: "Generate PDF documentation"
-      env:
-          extra_mem_bot: 20000000
-          extra_mem_top: 30000000
-      run: |
-        make -C doc pdf
+    # - name: "Generate PDF documentation"
+    #   env:
+    #       extra_mem_bot: 20000000
+    #       extra_mem_top: 30000000
+    #   run: |
+    #     make -C doc pdf
 
-    - name: Upload PDF documentation
-      uses: actions/upload-artifact@v4
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-pdf
-        path: doc/_build/latex/*.pdf
-        retention-days: 7
+    # - name: Upload PDF documentation
+    #   uses: actions/upload-artifact@v4
+    #   if: matrix.python-version == env.MAIN_PYTHON_VERSION
+    #   with:
+    #     name: documentation-pdf
+    #     path: doc/_build/latex/*.pdf
+    #     retention-days: 7
 
     - name: "Generate HTML documentation"
       run: |
