--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -74,7 +74,7 @@ jobs:
           { image: '24.1.0', version: '241' },
           { image: '24.2.0', version: '242' },
         ]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10'] #, '3.11', '3.12']
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -137,8 +137,8 @@ jobs:
     needs: [gen-stubs]
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        os: [ubuntu-latest] #, windows-latest]
+        python-version: ['3.10'] #, '3.11', '3.12']
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
@@ -207,6 +207,22 @@ jobs:
     - name: "Install project & doc dependencies"
       run: |
         python -m pip install -e .[doc]
+
+    - name: "Generate PDF documentation"
+      run: |
+        sudo apt update
+        sudo apt install -y texlive-latex-extra latexmk texlive-xetex texlive-fonts-extra qpdf xindy
+        make -C doc pdf SPHINXERRWARN=""
+      env:
+        pool_size: 7000000
+
+    - name: Upload PDF documentation
+      uses: actions/upload-artifact@v4
+      if: matrix.python-version == env.MAIN_PYTHON_VERSION
+      with:
+        name: documentation-pdf
+        path: doc/_build/latex/*.pdf
+        retention-days: 7
 
     - name: "Generate HTML documentation"
       run: |
@@ -292,24 +308,6 @@ jobs:
         name: documentation-html
         path: doc/_build/html
         retention-days: 7
-
-    - name: "Generate PDF documentation"
-      run: |
-        sudo apt update
-        sudo apt install -y texlive-latex-extra latexmk texlive-xetex texlive-fonts-extra qpdf xindy
-        make -C doc pdf SPHINXERRWARN=""
-      env:
-        extra_mem_bot: 20000000
-        extra_mem_top: 30000000
-
-    - name: Upload PDF documentation
-      uses: actions/upload-artifact@v4
-      if: matrix.python-version == env.MAIN_PYTHON_VERSION
-      with:
-        name: documentation-pdf
-        path: doc/_build/latex/*.pdf
-        retention-days: 7
-
 
   build-library:
     name: Build library
