--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -100,3 +100,5 @@ jobs:
       with:
         token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
         use-conventional-commits: true
+        bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+        bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
