--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -108,7 +108,7 @@ jobs:
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
           find . -type d -name src
-          python stub_generator/create_files.py > results.txt
+          python ./src/ansys/mechanical/stubs/stub_generator/create_files.py > results.txt
         continue-on-error: True
 
       - name: "Check stubs were generated"
