--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -107,7 +107,7 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
-          find . -type d -name src
+          find . -type f -name create_files.py
           python ./src/ansys/mechanical/stubs/stub_generator/create_files.py > results.txt
         continue-on-error: True
 
