--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -191,7 +191,7 @@ jobs:
     - name: "Compress the wheelhouse"
       uses: vimtor/action-zip@v1.2
       with:
-        files: dist/*.whl
+        files: dist/
         dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
 
     - name: "Upload the compressed wheelhouse"
