--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -164,15 +164,20 @@ jobs:
     - name: Install on Windows
       if: matrix.os == 'windows-latest'
       run: |
+        New-Item -Path $PWD -Name "wheelhouse" -ItemType "Directory"
         cd dist
         $files = Get-ChildItem -Path $PWD | Where-Object { $_.Extension -eq '.whl' }
         foreach ($file in $files) {
+          Copy-Item -Path "$file" -Destination "..\wheelhouse"
           pip install $file
         }
 
     - name: Install on Ubuntu
       if: matrix.os == 'ubuntu-latest'
-      run: pip install dist/*.whl
+      run: |
+        mkdir wheelhouse
+        cp dist/*.whl wheelhouse
+        pip install dist/*.whl
 
     - name: "Retrieve Mechanical version"
       shell: python
@@ -191,7 +196,7 @@ jobs:
     - name: "Compress the wheelhouse"
       uses: vimtor/action-zip@v1.2
       with:
-        files: dist/
+        files: wheelhouse
         dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
 
     - name: "Upload the compressed wheelhouse"
