--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -164,24 +164,28 @@ jobs:
       - name: "Install Git and clone project"
         uses: actions/checkout@v5
 
+      - name: "Set up Python"
+        uses: ./.github/workflows/setup-python/
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: "Configure Python"
+        run: |
+          # Link python to the installed version
+          ln -s /usr/local/bin/python${{ matrix.python-version }} /usr/bin/python
+
+          # Verify Python installation
+          python -m pip install --upgrade pip
+          python --version
+          python -m pip --version
+
       - name: "Install dependencies"
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
           apt update
-          apt install --reinstall ca-certificates
-          apt install software-properties-common -y
-          add-apt-repository ppa:deadsnakes/ppa -y
-          apt install python${{ matrix.python-version }} -y
-          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
-          apt install python${{ matrix.python-version }}-venv -y
           apt install -y lsb-release mono-complete make git zip
-
-          python -m ensurepip --default-pip
-          python -m pip install --upgrade pip
-          python --version
-          python -m pip --version
 
           python -m pip install -e .[build,doc]
           python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
