--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -401,6 +401,18 @@ jobs:
           path: documentation-md
           retention-days: 7
 
+      - name: "Create fake PDF"
+        run: |
+          mkdir -p doc/_build/latex
+          touch doc/_build/latex/doc.pdf
+
+      - name: Upload PDF Documentation
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation-pdf
+          path: doc/_build/latex/doc.pdf
+          retention-days: 7
+
   clean-docs:
     name: Clean HTML and Markdown documentation
     runs-on: ubuntu-latest
