--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -402,12 +402,18 @@ jobs:
           retention-days: 7
 
       - name: "Create fake PDF"
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
         run: |
           mkdir -p doc/_build/latex
           touch doc/_build/latex/doc.pdf
 
       - name: Upload PDF Documentation
         uses: actions/upload-artifact@v4
+        if: |
+          github.event_name == 'workflow_dispatch' ||
+          matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
           name: documentation-pdf
           path: doc/_build/latex/doc.pdf
