--- a/.github/workflows/setup-python/action.yml
+++ b/.github/workflows/setup-python/action.yml
@@ -36,7 +36,7 @@ runs:
     - name: Get most recent Python version
       shell: bash
       run: |
-          declare -A python_versions=(["3.10"]="3.10.18" ["3.11"]="3.11.13" ["3.12"]="3.12.11" ["3.13"]="3.13.7")
+          declare -A python_versions=(["3.11"]="3.11.13" ["3.12"]="3.12.11" ["3.13"]="3.13.7")
 
           # Get the Python version inputs
           python_version_input="${{ inputs.python-version }}"
